--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -15,8 +15,8 @@ sites:
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
-  cname: iscsdown2.bang1338.xyz
-  # baseUrl: /your-repo-name
+  cname: bang1338.xyz
+  baseUrl: /iscsdown-2
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
   name: Upptime
   introTitle: "**iscsdown 2**"
