--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,6 +1,6 @@
 # Change these first
 owner: bang1338 # Your GitHub organization or username, where this repository lives
-repo: iscsdown 2 # The name of this repository
+repo: iscsdown-2 # The name of this repository
 
 sites:
   - name: Comic Studio
@@ -15,8 +15,8 @@ sites:
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
-  cname: iscsdown2.bang1338.xyz
-  # baseUrl: /iscsdown-2
+  # cname: iscsdown2.bang1338.xyz
+  baseUrl: /iscsdown-2
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
   name: Upptime
   introTitle: "**iscsdown 2**"
